fix font size and gap in rental page

--- a/src/styles/pages/Rental.scss
+++ b/src/styles/pages/Rental.scss
@@ -6,8 +6,16 @@
   gap: 10px 20px;
   margin: 20px 0 30px 0;
 }
+.rental-title {
+  font-size: 2rem;
+  font-weight: 500;
+  color: #ff6060;
+  margin: 0;
+}
 .rental-location {
+  font-size: 1em;
   margin: 2px 0;
+  font-weight: 500;
 }
 .tag-list {
   margin: 5px 0;
@@ -40,9 +48,10 @@
   display: flex;
   justify-content: space-between;
   align-items: stretch;
+  gap: 40px;
 }
 .rental-page .dropdown-container {
-  width: calc(50% - 40px);
+  width: calc(50% - 20px);
 }
 
 /* MEDIA QUERIES */
@@ -75,20 +84,12 @@
     width: calc(50% - 20px);
     margin-bottom: 0;
   }
-  .rental-location {
-    font-weight: 500;
-    font-size: 1.1em;
-    color: rgba(0, 0, 0, 1);
-  }
 }
 
 @media (max-width: 768px) {
-  .carousel-image {
-    height: 255px;
-  }
   .rental-main {
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
   }
   .rental-page .dropdown-container {
     width: 100%;
